<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="first_name">Имя</string>
    <string name="required">*Необходимо</string>
    <string name="name_request">Введите ваше имя!</string>
    <string name="last_name">Фамилия</string>
    <string name="lastName_request">Введите вашу фамилию!</string>
    <string name="email_address">E-mail адрес</string>
    <string name="email_request">Введите ваш e-mail адрес!</string>
    <string name="confirmation">Мы пришлем подтверждение вам на почту</string>
    <string name="password">Пароль</string>
    <string name="pass_requirements">Пароль должен состоять не менее 8 символов в длину</string>
    <string name="gender">Пол</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="unspecified">Неопределенный</string>
    <string name="date">Дата рождения</string>
    <string name="to_regist">Регистрация</string>
    <string name="email_example">example@gmail.com</string>
    <string name="password_hint">Ваш пароль</string>
    <string name="dd">ДД</string>
    <string name="slash">/</string>
    <string name="mm">MM</string>
    <string name="yyyy">ГГГГ</string>
    <string name="title">Регистрация</string>
    <string name="edit_date">0%1$s</string>
    <string name="verification">Please verify your email address</string>
    <string name="date_requirements">Введите свою дату рождения</string>
    <string name="toast_connection">Internet connection problem. Try again.</string>
    <string name="error_data">Not all data is correct.</string>
    <string name="error_collision">The email address is already in use by another account.</string>
    <string name="error_connection">A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>
</resources>