<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.midina.registration_ui.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainTextMarginStart"
            android:layout_marginTop="@dimen/mainTextMarginTop"
            android:text="@string/email_address"
            android:textSize="@dimen/mainTextOfTopic"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_email_rq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/rqMarginStart"
            android:layout_marginTop="@dimen/rqMarginTop"
            android:text="@string/required"
            app:layout_constraintStart_toEndOf="@+id/tv_email"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/etMarginStart"
            android:layout_marginTop="@dimen/etMarginTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_example"
                android:afterTextChanged="@{(text) -> viewModel.onEmailChanged(text)}"
                app:onFocusChangeListener = "@{viewModel.emailOnFocusListener}"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/etMinHeight"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/requestMarginStart"
            android:layout_marginTop="@dimen/requestMarginTop"
            android:text="@string/email_request"
            android:visibility="gone"
            app:state="@{viewModel.emailState}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email" />

        <TextView
            android:id="@+id/tv_email_sending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/emailSendingMarginStart"
            android:layout_marginTop="@dimen/emailSendingMarginTop"
            android:text="@string/confirmation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRequest" />

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="@dimen/cvWidth"
            android:layout_height="@dimen/cvHeight"
            android:layout_marginEnd="@dimen/cvEndMargin"
            android:visibility="visible"
            android:src="@drawable/ic_default"
            app:state="@{viewModel.emailState}"
            app:layout_constraintBottom_toBottomOf="@+id/til_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <View
            android:id="@+id/dividerLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"
            android:layout_marginTop="@dimen/dividerMarginTop"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_sending" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>