<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.midina.registration_ui.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainTextMarginStart"
            android:layout_marginTop="@dimen/mainTextMarginTop"
            android:text="@string/date"
            android:textSize="@dimen/mainTextOfTopic"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_rq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/rqMarginStart"
            android:layout_marginTop="@dimen/rqMarginTop"
            android:text="@string/required"
            app:layout_constraintStart_toEndOf="@+id/tv_date"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_days"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/daysWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/etMarginStart"
            android:layout_marginTop="@dimen/dateMarginTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date">

            <EditText
                android:id="@+id/et_date_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dd"
                app:addTextChangedListener="@{viewModel.daysOnTextChangeListener}"
                app:onFocusChangeListener = "@{viewModel.daysOnFocusListener}"
                android:inputType="number"
                android:maxLength="2"
                android:textSize="@dimen/dateTextSize"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_slash1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/slashMarginStart"
            android:layout_marginTop="@dimen/firstSlashMarginTop"
            android:text="@string/slash"
            android:textSize="@dimen/slash"
            app:layout_constraintStart_toEndOf="@+id/til_days"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_monthes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/monthesWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dateMarginStart"
            android:layout_marginTop="@dimen/dateMarginTop"
            app:layout_constraintStart_toEndOf="@+id/tv_slash1"
            app:layout_constraintTop_toBottomOf="@+id/tv_date">

            <EditText
                android:id="@+id/et_date_monthes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mm"
                android:inputType="number"
                android:maxLength="2"
                app:addTextChangedListener="@{viewModel.monthesOnTextChangeListener}"
                app:onFocusChangeListener = "@{viewModel.monthesOnFocusListener}"
                android:textSize="@dimen/dateTextSize"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_slash2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/slashMarginStart"
            android:layout_marginTop="@dimen/slashMarginTop"
            android:text="@string/slash"
            android:textSize="@dimen/slash"
            app:layout_constraintStart_toEndOf="@+id/til_monthes"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_years"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/yearsWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dateMarginStart"
            android:layout_marginTop="@dimen/dateMarginTop"
            app:layout_constraintStart_toEndOf="@+id/tv_slash2"
            app:layout_constraintTop_toBottomOf="@+id/tv_date">

            <EditText
                android:id="@+id/et_date_years"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="4"
                android:hint="@string/yyyy"
                app:addTextChangedListener="@{viewModel.yearsOnTextChangeListener}"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="@dimen/dateTextSize" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/iv_date"
            android:layout_width="@dimen/cvWidth"
            android:layout_height="@dimen/cvHeight"
            android:layout_marginEnd="@dimen/cvEndMargin"
            android:visibility="visible"
            android:src="@drawable/ic_default"
            app:state="@{viewModel.dateState}"
            app:layout_constraintBottom_toBottomOf="@+id/til_years"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <TextView
            android:id="@+id/tvRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_requirements"
            android:layout_marginStart="@dimen/dateMarginStart"
            android:layout_marginTop="@dimen/dividerMarginTop"
            android:visibility="gone"
            app:state="@{viewModel.dateState}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_slash1"/>

        <View
            android:id="@+id/dividerLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"
            android:layout_marginTop="@dimen/requestMarginTop"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRequest" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>