<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.midina.registration_ui.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainTextMarginStart"
            android:layout_marginTop="@dimen/mainTextMarginTop"
            android:text="@string/password"
            android:textSize="@dimen/mainTextOfTopic"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pass_rq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/rqMarginStart"
            android:layout_marginTop="@dimen/rqMarginTop"
            android:text="@string/required"
            app:layout_constraintStart_toEndOf="@+id/tv_password"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/etMarginStart"
            android:layout_marginTop="@dimen/etMarginTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:afterTextChanged="@{(text) -> viewModel.onPasswordChanged(text)}"
                app:onFocusChangeListener = "@{viewModel.passwordOnFocusListener}"
                android:inputType="textPassword"
                android:minHeight="@dimen/etMinHeight" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/pass_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/progressBarWidth"
            android:layout_height="@dimen/progressBarHeight"
            android:layout_marginStart="@dimen/progressBarMarginStart"
            android:layout_marginTop="@dimen/progressBarMarginTop"
            android:max="8"
            android:progressBackgroundTint="@color/progressBackgroundTint"
            android:progressTint="@color/progressTint"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/requestMarginStart"
            android:layout_marginTop="@dimen/requestMarginTop"
            android:text="@string/pass_requirements"
            android:visibility="gone"
            app:state="@{viewModel.passwordState}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_progress_bar" />

        <ImageView
            android:id="@+id/iv_pass"
            android:layout_width="@dimen/cvWidth"
            android:layout_height="@dimen/cvHeight"
            android:layout_marginEnd="@dimen/cvEndMargin"
            android:visibility="visible"
            android:src="@drawable/ic_default"
            app:state="@{viewModel.passwordState}"
            app:layout_constraintBottom_toBottomOf="@+id/til_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <View
            android:id="@+id/dividerLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"
            android:layout_marginTop="@dimen/dividerMarginTop"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRequest" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>